fix scrollbar in new design

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -144,7 +144,7 @@ body, html, #reactbody {
 
 .editor-container {
     overflow: auto;
-    margin: 75px 50px 50px 50px;
+    padding: 75px 50px 50px 50px;
 }
 
 .task-importer {
